feat: 第二阶段Ansible标准化交付 - 新增Docker/Nginx双角色原子任务 - 实现配置变更自动化验证 - 集成健康检查与SSL配置

--- a/阶段二_全环境配置标准化（Ansible-Role）/ansible.cfg
+++ b/阶段二_全环境配置标准化（Ansible-Role）/ansible.cfg
@@ -1,7 +1,14 @@
 [defaults]
-inventory = inventory/manual_ecs.ini
+inventory = ./inventory/manual_ecs.ini
 host_key_checking = False
 pipelining = True
 roles_path = ./roles
-collections_path = /usr/share/ansible/collections
+control_path_dir = /dev/shm/ansible_control_path
+collections_path = ~/.ansible/collections:/usr/share/ansible/collections
 interpreter_python = /usr/bin/python3
+
+[docker_host]
+localhost ansible_connection=docker
+
+[ssh_connection]
+ssh_args = -o IdentitiesOnly=yes  
