--- a/阶段二_全环境配置标准化（Ansible-Role）/inventory/manual_ecs.ini
+++ b/阶段二_全环境配置标准化（Ansible-Role）/inventory/manual_ecs.ini
@@ -1,5 +1,12 @@
+[web]
+47.98.112.245 ansible_ssh_port=2222 ansible_ssh_private_key_file=/root/.ssh/shenzhen_to_hangzhou ansible_user=root
+
 [web_servers]
-47.98.112.245 ansible_port=2222 ansible_user=root ansible_ssh_private_key_file=/root/.ssh/shenzhen_to_hangzhou ansible_python_interpreter=/usr/bin/python3
+47.98.112.245
+
+[web_servers]
+47.98.112.245 ansible_port=2222 ansible_user=root ansible_ssh_private_key_file=/root/.ssh/shenzhen_to_hangzhou ansible_python_interpreter=/usr/bin/python3 ansible_connection=ssh 
 
 [db_servers]
 47.98.112.245 ansible_port=2222 ansible_user=root
+
