--- a/阶段四_实时部署可观测性（Prometheus+Grafana）/alertmanager.yml
+++ b/阶段四_实时部署可观测性（Prometheus+Grafana）/alertmanager.yml
@@ -1,14 +1,28 @@
 route:
-  group_by: ['alertname']
+  group_by: ['alertname', 'service']
   group_wait: 10s
   group_interval: 5m
   receiver: 'default-email'
+  routes:
+  - match:
+      environment: dev
+    receiver: 'null'
+  - match:
+      severity: critical
+    receiver: 'webhook-receiver'
 
 receivers:
 - name: 'default-email'
   email_configs:
   - to: 'iamhuchenyu@163.com'
     smarthost: 'smtp.163.com:587'
-    auth_username: 'user'
+    auth_username: 'iamhuchenyu'
     auth_password: '******'
+    require_tls: true
     send_resolved: true
+
+- name: 'webhook-receiver'
+  webhook_configs:
+  - url: ''
+
+- name: 'null'
